--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cool Responsive Portfolio Website Design</title>
+    <title>Portfolio Website</title>
 
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
@@ -48,8 +48,8 @@
                         class='bx bxl-linkedin'></i></a>
             </div>
 
-            <a href="https://docs.google.com/document/d/1TUhq9gvWMmVCAK0JKqu_MBG61orflf8Ylj3iRUurNos/edit?tab=t.0" target="_blank"
-                class="btn">Resume</a>
+            <a href="https://docs.google.com/document/d/1TUhq9gvWMmVCAK0JKqu_MBG61orflf8Ylj3iRUurNos/edit?tab=t.0"
+                target="_blank" class="btn">Resume</a>
         </div>
 
         <div class="profession-container">
